2005-01-11 Mikhail Khodjaiants
	Use the asynchronous implementation for resume, suspend, step etc provided by eclipse 3.1.
	* CDebugTarget.java
	* CThread.java
	* CoreModelMessages.properties

2005-01-10 Mikhail Khodjaiants
	Use the asynchronous implementation for resume, suspend, step etc provided by eclipse 3.1.
	* CDebugTarget.java
	* CThread.java
	* CoreModelMessages.properties

2005-01-10 Mikhail Khodjaiants
	Bug 73168: Use memory view provided by Eclipse platform in CDT.
	* ICType.java
	* CType.java
	* CMemoryBlockExtension.java
	* CMemoryBlockExtensionRetrieval.java

2005-01-04 Mikhail Khodjaiants
	Fix for bug 82184: arrayboundsexception on display of array variable.
	* CIndexedValue.java

2004-12-23 Mikhail Khodjaiants
	Cleanup.
	* CMemoryBlockExtension.java

2004-12-22 Mikhail Khodjaiants
	Fix for bug 75948: Provide "breakpoint type name" for C breakpoints.
	Applied patch from Jared Burns.
	* plugin.properties
	* plugin.xml

2004-12-22 Mikhail Khodjaiants
	Fix for bug 73168: Use memory view provided by Eclipse platform in CDT.
	The CMemoryBlockextension is used as an adapter to "IMemoryBlockRetrieval".
	* CMemoryBlockExtension.java

2004-12-21 Mikhail Khodjaiants
	Switch to the new memory view interfaces (Eclipse 3.1).
	* InternalDebugCoreMessages.properties
	* CMemoryBlockExtensionRetrieval.java: new
	* CExtendedMemoryBlockRetrieval.java: deleted
	* CDebugTarget.java
	* CMemoryBlockExtension.java: new
	* CExtendedMemoryBlock.java: deleted

2004-12-20 Mikhail Khodjaiants
	Fix for bug 81698: NumberFormatException in CValue.
	* CValue.java

2004-12-16 Mikhail Khodjaiants
	Fix for bug 81381: Deadlock when single stepping.
	* CThread.java

2004-12-08 Mikhail Khodjaiants
	Fix for bug 79678: NPE in Expression.
	* CExpression.java

2004-12-01 Mikhail Khodjaiants
	New fix for bug 80034: Expressions view does not display correct no. of elements in array.
	* CValueFactory.java
	* CExpression.java

2004-12-03 Mikhail Khodjaiants