@@ -1,3 +1,7 @@
+2005-01-10 Mikhail Khodjaiants
+	PR 82601 changes to the memory block interface
+	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDIMemoryBlock.java
+
 2005-01-11 Mikhail Khodjaiants
 	Use the asynchronous implementation for resume, suspend, step etc provided by eclipse 3.1.
 	* CDebugTarget.java
